config loading improved!!